@@ -2,6 +2,8 @@ r128:
 New   : lz4 cli sparse file support
 New   : command -m, to compress multiple files in a single command
 Fixed : Restored lz4hc compression ratio (slightly lower since r124)
+New   : lz4frame supports skippable frames
+Changed:Default "make install" directory is /usr/local
 New   : g++ compatibility tests
 New   : datagen can generate sparse files
 New   : scan-build tests
